[gd_scene load_steps=4 format=2]

[ext_resource path="res://Texture/game_screen.png" type="Texture" id=1]
[ext_resource path="res://Song/aesthetic.ogg" type="AudioStream" id=2]
[ext_resource path="res://Script/TitleScreen.gd" type="Script" id=3]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.533333, 0.711111 )
texture = ExtResource( 1 )
centered = false

[node name="TutorialButton" type="Button" parent="."]
margin_left = 248.0
margin_top = 256.0
margin_right = 328.0
margin_bottom = 276.0
text = "TUTORIAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StagesButton" type="Button" parent="."]
margin_left = 248.0
margin_top = 304.0
margin_right = 328.0
margin_bottom = 324.0
text = "STAGES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 248.0
margin_top = 352.0
margin_right = 328.0
margin_bottom = 372.0
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="StagesButton" to="." method="_on_StagesButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
